# shortly-api

./: .env.example  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile-dev  docker-compose-dev.yml
src/: __init__.py  main.py
src/controllers/: LoginController.py  UrlsController.py
src/database/: DatabaseInMemory.py
src/libs/: crypt.py
src/repositories/: LoginRepositoryInMemory.py
src/services/: LoginService.py
tests/: test_initial.py
