[tool.poetry]
name = "fastapi-testes"
version = "0.1.0"
description = ""
authors = ["Gabriel Viana Boaes <gvb@certi.org.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^0.21.1"
sqlalchemy = "^2.0.0"
pre-commit = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"
